--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "website.com",
+  "name": "portfolio-website-template",
   "version": "1.0.0",
+  "homepage": "https://innowhat.github.io/portfolio-website-template",
   "private": true,
   "dependencies": {
+    "gh-pages": "^2.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-ga": "^2.7.0",
@@ -13,6 +15,8 @@
     "typescript": "^3.7.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
