--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio-template",
-  "version": "1.0.0",
   "homepage": "https://innowhat.github.io/portfolio-template",
+  "version": "1.1.0",
   "private": true,
   "dependencies": {
     "gh-pages": "^2.2.0",
@@ -11,8 +11,7 @@
     "react-icons": "^3.8.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
-    "styled-components": "^4.4.1",
-    "typescript": "^3.7.2"
+    "styled-components": "^4.4.1"
   },
   "scripts": {
     "predeploy": "npm run build",
